# KURATE

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
kurate-backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
kurate-backend/postman/: KURATE.postman_collection.json
kurate-backend/prisma/: schema.prisma
kurate-backend/src/: constants.js  index.js  mcp-server.js  server.js
kurate-backend/src/config/: db.js
kurate-backend/src/controllers/: cart.controllers.js  documentController.js  promptController.js
kurate-backend/src/database/: migrate.js  repository.js
kurate-backend/src/mcp/: mcpServerFactory.js
kurate-backend/src/middlewares/: auth.middlewares.js  upload.middlewares.js
kurate-backend/src/routes/: api.js  (+2 more)
kurate-frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
kurate-frontend/src/: App.jsx  index.css
kurate-parser/: .dockerignore  Dockerfile  README.md  pyproject.toml
kurate-parser/src/: config.py  main.py  pipeline.py
kurate-parser/src/utils/: md_formatter.py  s3_uploader.py
postman/: KURATE.postman_environment.json
src/: app.js
src/controllers/: cart.controllers.js  document.controllers.js  user.controllers.js
src/database/: index.js
src/models/: contextCart.model.js  contextCart.models.js  document.models.js  user.model.js  user.models.js
src/routes/: cart.routes.js  document.routes.js  user.routes.js
src/utils/: APIError.js  documentParsers.js  emailService.js
(+39 files in other folders)
