[project]
name = "kurate-parser"
version = "0.1.0"
description = "Multimodal document ingestion microservice (Docling-based) for KURATE"
readme = "README.md"
authors = [
  {name = "Bilal Asif Burney", email = "bilalburney14@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "docling>=2.20.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "boto3>=1.34.0",
    "pydantic-settings>=2.4.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
